--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,11 @@ classgraphVersion=4.8.90
 jacksonVersion=2.11.3
 jacksonDatabindVersion=2.11.3
 spellsourceVersion=0.8.89
+jaegerVersion=1.5.0
 vertxVersion=4.0.0
 junitVersion=5.6.2
 shadowPluginVersion=6.1.0
 guavaVersion=26.0-jre
 keycloakVersion=12.0.1
 databasesandlifeVersion=14.0.0
+micrometerVersion=1.6.2
