--- a/micro/build.gradle
+++ b/micro/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:16.0.2'
     runtimeOnly 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'com.google.guava:guava:26.0-jre'
-    implementation 'io.jaegertracing:jaeger-client:1.2.0'
+    implementation "io.jaegertracing:jaeger-client:$jaegerVersion"
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'org.apache.commons:commons-math3:3.7'
     implementation 'commons-io:commons-io:2.4'
