--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ guavaVersion=26.0-jre
 keycloakVersion=12.0.1
 databasesandlifeVersion=14.0.0
 micrometerVersion=1.6.2
+jmhVersion=1.25
+testcontainersVersion=1.15.1
