--- a/net/build.gradle
+++ b/net/build.gradle
@@ -41,7 +41,6 @@ configurations.runtime {
 }
 
 dependencies {
-    implementation platform('org.testcontainers:testcontainers-bom:1.15.+')
     implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 
@@ -104,8 +103,8 @@ dependencies {
 
     testImplementation project(':testcontainers')
     testImplementation project(':testutils')
-    testImplementation "org.testcontainers:testcontainers"
-    testImplementation "org.testcontainers:junit-jupiter"
+    testImplementation "org.testcontainers:testcontainers:$testcontainersVersion"
+    testImplementation "org.testcontainers:junit-jupiter:$testcontainersVersion"
     testImplementation group: 'io.vertx', name: 'vertx-junit5', version: vertxVersion
     testImplementation(group: 'org.jboss.resteasy', name: 'resteasy-client', version: '4.5.6.Final') {
         exclude group: 'javax.activation', module: 'activation'
