--- a/testcontainers/build.gradle
+++ b/testcontainers/build.gradle
@@ -16,8 +16,8 @@ repositories {
 }
 
 dependencies {
-    api "org.testcontainers:testcontainers"
-    api "org.testcontainers:toxiproxy"
+    api "org.testcontainers:testcontainers:$testcontainersVersion"
+    api "org.testcontainers:toxiproxy:$testcontainersVersion"
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonDatabindVersion"
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonDatabindVersion"
