--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 org.gradle.parallel=true
 org.gradle.vfs.watch=true
+org.gradle.caching=true
 classgraphVersion=4.8.90
 jacksonVersion=2.11.3
 jacksonDatabindVersion=2.11.3
