In-progress Kube

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include 'python'
 include 'spellsource-server'
 include 'spellsource-client'
 include 'spellsource-game-benchmarks'
+include 'spellsource-server-deployment'
