--- a/spellsource-containers/src/main/resources/docker/keycloak/Dockerfile
+++ b/spellsource-containers/src/main/resources/docker/keycloak/Dockerfile
@@ -1,2 +1,4 @@
-FROM quay.io/keycloak/keycloak:12.0.1
-COPY keycloak-scrypt.jar /opt/jboss/keycloak/standalone/deployments/
+FROM docker.io/bitnami/keycloak:12.0.3
+COPY keycloak-scrypt.jar /opt/bitnami/keycloak/standalone/deployments/
+COPY libkeycloak.sh /opt/bitnami/scripts/libkeycloak.sh
+COPY keycloak-env.sh /opt/bitnami/scripts/keycloak-env.sh
