--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ jacksonVersion=2.11.3
 jacksonDatabindVersion=2.11.3
 spellsourceVersion=0.8.89
 jaegerVersion=1.5.0
-vertxVersion=4.0.0
+vertxVersion=4.0.2
 junitVersion=5.6.2
 shadowPluginVersion=6.1.0
 guavaVersion=26.0-jre
@@ -15,3 +15,4 @@ databasesandlifeVersion=14.0.0
 micrometerVersion=1.6.2
 jmhVersion=1.25
 testcontainersVersion=1.15.1
+rmeePluginsVersion=1.1.20200614081240
