--- a/spellsource-common/build.gradle
+++ b/spellsource-common/build.gradle
@@ -8,10 +8,12 @@ apply plugin: 'maven'
 group 'com.hiddenswitch'
 
 dependencies {
+    compileOnly project(":quasar-core")
     api "io.vertx:vertx-core:$vertxVersion"
     api 'org.slf4j:slf4j-api:1.7.22'
     api 'com.google.guava:guava:26.0-jre'
     api 'org.jetbrains:annotations:16.0.2'
     api 'com.fasterxml.jackson.core:jackson-databind:2.10.2'
+    api "io.jaegertracing:jaeger-client:$jaegerVersion"
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
 }
