--- a/spellsource-server-deployment/src/main/helm/spellsource/templates/tests/test-connection.yaml
+++ b/spellsource-server-deployment/src/main/helm/spellsource/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "spellsource.fullname" . }}:{{ .Values.service.port }}/liveness']
+      args: ['{{ include "spellsource.fullname" . }}:{{ .Values.configmap.metrics.port }}{{ .Values.configmap.metrics.livenessRoute }}']
   restartPolicy: Never
