--- a/spellsource-server-deployment/src/main/helm/spellsource-values.yaml
+++ b/spellsource-server-deployment/src/main/helm/spellsource-values.yaml
@@ -1,8 +1,15 @@
+redis:
+  enabled: false
+postgresql:
+  enabled: false
+keycloak:
+  enabled: false
 configmap:
   pg:
     host: "postgres-postgresql-ha-pgpool.default.svc.cluster.local"
     user: "postgres"
     password: "password"
+    database: "spellsource"
     port: 5432
   keycloak:
     # keycloak port is 8080 by default on bitnami images, and we override it to 9090
@@ -11,3 +18,6 @@ configmap:
     adminPassword: "password"
   redis:
     uri: "redis://redis-master.default.svc.cluster.local:6379"
+# Turn off logs
+logback: |
+  scan("10 seconds")
