--- a/spellsource-server-deployment/src/main/helm/spellsource/Chart.yaml
+++ b/spellsource-server-deployment/src/main/helm/spellsource/Chart.yaml
@@ -22,3 +22,22 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.9.0"
+dependencies:
+  - name: postgresql-ha
+    version: "~6.6.0"
+    repository: "https://charts.bitnami.com/bitnami"
+    condition: postgresql.enabled
+    tags:
+      - postgres
+  - name: keycloak
+    version: "~2.2.1"
+    repository: "https://charts.bitnami.com/bitnami"
+    condition: keycloak.enabled
+    tags:
+      - keycloak
+  - name: redis
+    repository: "https://charts.bitnami.com/bitnami"
+    condition: redis.enabled
+    version: "~12.8.0"
+    tags:
+      - redis
