--- a/spellsource-server-deployment/src/main/helm/spellsource/templates/configmap.yaml
+++ b/spellsource-server-deployment/src/main/helm/spellsource/templates/configmap.yaml
@@ -1,4 +1,5 @@
 {{- $configMap := toYaml .Values.configmap -}}
+{{- $logback := .Values.logback -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -14,3 +15,5 @@ data:
   spellsource-config.yaml: |
     # Dummy comment: https://github.com/kubernetes/helm/blob/master/docs/chart_template_guide/yaml_techniques.md#strings-in-yaml
 {{ tpl $configMap . | indent 4 }}
+  logback.groovy: |
+{{ tpl $logback . | indent 4 }}
