--- a/spellsource-server-deployment/src/main/helm/spellsource/templates/service.yaml
+++ b/spellsource-server-deployment/src/main/helm/spellsource/templates/service.yaml
@@ -11,6 +11,26 @@ spec:
       targetPort: grpc
       protocol: TCP
       name: grpc
+  selector:
+    {{- include "spellsource.selectorLabels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "spellsource.fullname" . }}internal
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: {{ .Values.configmap.metrics.port | quote}}
+    prometheus.io/path: {{ .Values.configmap.metrics.metricsRoute }}
+    prometheus.io/scheme: "http"
+  labels:
+  {{- include "spellsource.labels" . | nindent 4 }}
+spec:
+  clusterIP: None
+  ports:
+    - name: http
+      port: {{ .Values.configmap.metrics.port }}
+      protocol: TCP
     - name: infinispan
       port: 7800
       protocol: TCP
