--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ micrometerVersion=1.6.2
 jmhVersion=1.25
 testcontainersVersion=1.15.1
 rmeePluginsVersion=1.1.20200614081240
+postgresqlVersion=42.2.18
