--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include 'spellsource-server'
 include 'spellsource-client'
 include 'spellsource-game-benchmarks'
 include 'spellsource-server-deployment'
+include 'spellsource-private'
