--- a/spellsource-server-deployment/src/main/helm/spellsource/templates/deployment.yaml
+++ b/spellsource-server-deployment/src/main/helm/spellsource/templates/deployment.yaml
@@ -4,6 +4,11 @@ metadata:
   name: {{ include "spellsource.fullname" . }}
   labels:
     {{- include "spellsource.labels" . | nindent 4 }}
+  annotations:
+    checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+    {{- if .Values.deployment.annotations }}
+    {{- include "common.tplvalues.render" ( dict "value" .Values.deployment.annotations "context" $) | nindent 4 }}
+    {{- end }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
